# Geant4_2020

PET/: CMakeLists.txt  PET.cc  Plot3D.cxx  PlotDetIdDetId.cxx  vis.mac
PET/include/: DetectorConstruction.hh  DetectorsRing.hh  EMPhysics.hh  EventAction.hh  GeneralPhysics.hh  HumanFantom.hh  NaIHit.hh  NaISD.hh  OutputRoot.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
PET/src/: DetectorConstruction.cc  DetectorsRing.cc  EMPhysics.cc  EventAction.cc  GeneralPhysics.cc  HumanFantom.cc  NaIHit.cc  NaISD.cc  OutputRoot.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
wyklad2/: kula.cpp
wyklad2/ruletka/: CMakeLists.txt  szatanskaGra.cpp
wyklad2/ruletka/include/: Ruletka.h
wyklad2/ruletka/src/: Ruletka.cpp
